--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,21 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
       jekyll-theme-WuK: # 我的主题的自定义样式都在这个命名空间
         comments: # 留言页，请先修改这里，确保使用的是你自己的repo！参照<https://utteranc.es/>
           append: |
-            <script
-              repo="wu-kan/utterances-storage"
-              src="https://utteranc.es/client.js"
-              issue-term="url"
-              theme="github-light"
-              crossorigin="anonymous"
-              async="async"
-            ></script>
+            <script src="https://giscus.app/client.js"
+                    data-repo="WKFish/wkfish.github.io"
+                    data-repo-id="R_kgDOJsEJnA"
+                    data-category="General"
+                    data-category-id="DIC_kwDOJsEJnM4CXHHn"
+                    data-mapping="pathname"
+                    data-strict="0"
+                    data-reactions-enabled="1"
+                    data-emit-metadata="0"
+                    data-input-position="top"
+                    data-theme="preferred_color_scheme"
+                    data-lang="zh-CN"
+                    crossorigin="anonymous"
+                    async>
+            </script>
         default:
           body:
             theme-base: theme-base-0b # 可选的主题色包括08~0f，见 <https://github.com/poole/lanyon>
