--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                     data-reactions-enabled="1"
                     data-emit-metadata="0"
                     data-input-position="top"
-                    data-theme="preferred_color_scheme"
+                    data-theme="light"
                     data-lang="zh-CN"
                     crossorigin="anonymous"
                     async>
