--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: wu-kan # 站点标题
+title: WKFish 的博客 # 站点标题
 description: | # 头像背后的信息（html格式），<br/>代表换行
   这里是 WKFish，一位热爱科技与开源的学生，希望成为一位知行合一的理想主义者。
   <a href="mailto:imwkfish@outlook.com>
