--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 href: /archive/
               - title: '<i class="fa-solid fa-tags fa-fw"></i> 标签'
                 href: /tags/
-              - title: '<i class="fa-solid fa-square-rss"></i> RSS'
+              - title: '<i class="fa-solid fa-square-rss"></i> 订阅'
                 href: /feed.xml
             simple_jekyll_search: # 侧边栏的全站搜索
               enable: true
