--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             nav: # 导航部分的内容，你也可以自己增加文字、图标（来自fontawesome）和对应的链接
               - title: '<i class="fa-solid fa-home fa-fw"></i> 首页'
                 href: /
-              - title: '<i class="fa-solid fa-id-badge"></i> 关于'
+              - title: '<i class="fa-solid fa-id-badge fa-fw"></i> 关于'
                 href: /about/
               - title: '<i class="fa-solid fa-comment fa-fw"></i> 留言'
                 href: /comments/
