--- a/_config.yml
+++ b/_config.yml
@@ -584,6 +584,9 @@ kramdown: # 见<https://kramdown.gettalong.org/options.html>
       line_numbers: false #渲染出来的效果好鬼畜
     span:
       disable: false
+
+minima:
+  date_format: "%Y 年 %m 月 %d 日"
 # 以下为 githubpage上不可修改的参数，见<https://help.github.com/en/github/working-with-github-pages/about-github-pages-and-jekyll>
 #lsi: false # 为相关文章生成索引
 #safe: true # 禁用自定义插件
